feat: store museum
